--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   backend:
     image: ruby:3.2
     working_dir: /app
-    command: bash -lc "bundle install && bin/rails db:prepare && bin/rails server -b 0.0.0.0 -p 3000"
+    command: bash -lc "rm -f tmp/pids/server.pid && bundle install && bin/rails db:prepare && bin/rails db:seed && bin/rails server -b 0.0.0.0 -p 3000"
     volumes:
       - ./backend:/app
       - backend_bundle:/bundle
@@ -41,7 +41,7 @@ services:
       - ./frontend:/app
       - frontend_node_modules:/app/node_modules
     environment:
-      VITE_API_URL: http://backend:3000
+      VITE_API_URL: http://localhost:3000
     ports:
       - "5173:5173"
     depends_on:
